--- a/indeex.html
+++ b/indeex.html
@@ -14,6 +14,8 @@
             <div class="primera"></div>
             <div class="segunda"></div>
             <div class="tercera"></div>
+            <div class="cuarta"></div>
+            <div class="quinta"></div>
         </div>
     </main>
     <main>
