--- a/indeex.html
+++ b/indeex.html
@@ -16,6 +16,20 @@
             <div class="tercera"></div>
             <div class="cuarta"></div>
             <div class="quinta"></div>
+            <div class="sexta"></div>
+            <div class="septima"></div>
+            <div class="octava"></div>
+            <div class="novena"></div>
+            <div class="decima"></div>
+            <div class="undecima"></div>
+            <div class="duodecima"></div>
+            <div class="trigesima"></div>
+            <div class="decimocuarto"></div>
+            <div class="decimoquinto"></div>
+            <div class="decimosexto"></div>
+            <div class="decimoseptimo"></div>
+            <div class="decimooctavo"></div>
+            </div>
         </div>
     </main>
     <main>
